// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`middleware basic 1`] = `
Object {
  action: findMany,
  args: undefined,
  dataPath: Array [],
  model: User,
  runInTransaction: false,
  span: NonRecordingSpan {
    _spanContext: Object {
      spanId: 0000000000000000,
      traceFlags: 0,
      traceId: 00000000000000000000000000000000,
    },
  },
}
`;

exports[`middleware basic 2`] = `
Object {
  action: findMany,
  args: undefined,
  dataPath: Array [],
  model: Post,
  runInTransaction: false,
  span: NonRecordingSpan {
    _spanContext: Object {
      spanId: 0000000000000000,
      traceFlags: 0,
      traceId: 00000000000000000000000000000000,
    },
  },
}
`;
